Fix overflow with wrapper, change media breakpoints

--- a/src/styles.css
+++ b/src/styles.css
@@ -23,6 +23,10 @@ body {
   overflow-x: hidden;
 }
 
+.wrapper {
+  overflow-x: hidden;
+}
+
 h1,
 h2,
 h3,
@@ -106,7 +110,6 @@ header {
 
 .project-screenshot {
   display: flex;
-  /* padding: 1rem; */
   justify-content: center;
   align-items: center;
   background-color: orange;
@@ -125,9 +128,6 @@ header {
 
 .project-description {
   padding: 1rem;
-
-  /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
-  /* height: 250px; */
 }
 
 .project-title {
@@ -143,10 +143,6 @@ header {
   gap: 1em;
 }
 
-.project-description > p {
-  /* padding: 1rem; */
-}
-
 .footer-background {
   background-color: #0891b2;
 }
@@ -155,7 +151,6 @@ footer {
   max-width: 1000px;
   display: flex;
   flex-direction: column;
-  /* background-color: #0891b2; */
   color: white;
   margin: 0 auto;
   margin-top: 2rem;
@@ -163,7 +158,6 @@ footer {
 
 footer > div img,
 footer .devicon-github-original {
-  /* max-height: 1rem; */
   font-size: 2rem;
   width: 2rem;
   height: auto;
@@ -185,13 +179,6 @@ footer a {
   color: white;
 }
 
-footer > :last-child {
-  /* text-align: center; */
-  /* display: flex; */
-  /* justify-content: center; */
-  /* gap: 1rem; */
-}
-
 footer > picture,
 footer picture > img {
   width: 100%;
@@ -210,7 +197,7 @@ footer picture > img {
   z-index: -2;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 600px) {
   .profile-pic-container {
     display: flex;
     flex-direction: column;
@@ -221,7 +208,7 @@ footer picture > img {
   }
 }
 
-@media (min-width: 800px) and (max-width: 1199px) {
+@media (min-width: 601px) and (max-width: 999px) {
   header {
     display: block;
     position: relative;
@@ -237,10 +224,6 @@ footer picture > img {
     float: left;
     margin: 50px;
     transform: scale(1.8) translate(-10%, -10%);
-    /* transform: translate(30px); */
-    /* position: relative; */
-    /* left: 175px; */
-    /* border: 3px solid #73ad21; */
   }
 
   header h1 {
@@ -264,7 +247,6 @@ footer picture > img {
   .profile-description-container > p {
     text-align: justify;
     max-width: 100%;
-    /* margin: 0; */
   }
 
   .profile-description-container > h2 {
@@ -334,16 +316,11 @@ footer picture > img {
   footer > div {
     gap: 1rem;
     padding: 1rem 0;
-    /* display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: space-between; */
   }
 
   footer > picture,
   footer picture > img {
     display: block;
-    /* padding: 2rem; */
   }
 
   footer > picture {
@@ -355,19 +332,6 @@ footer picture > img {
     justify-content: space-between;
   }
 
-  /* 
-  footer > div {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: space-between;
-  }
-
-  .p footer {
-    justify-content: center;
-  }
-   */
-
   .triangle {
     border-top: 500px solid #0891b2;
     border-right: 2000px solid transparent;
@@ -376,12 +340,7 @@ footer picture > img {
   }
 }
 
-@media (min-width: 1200px) {
-  /* body {
-    padding-top: 2rem;
-    background-color: transparent;
-  } */
-
+@media (min-width: 1000px) {
   .triangle {
     border-top: 500px solid #0891b2;
     border-right: 3500px solid transparent;
@@ -395,7 +354,6 @@ footer picture > img {
     justify-items: center;
     box-shadow: none;
     text-align: center;
-    /* margin-top: 1rem; */
     padding-top: 3rem;
     gap: 0;
     width: 100%;
@@ -515,24 +473,6 @@ footer picture > img {
     max-width: 50%;
   }
 }
-
-/* .triangle {
-  position: relative;
-  width: 0;
-  height: 0;
-} */
-
-/* .triangle:before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border-top: 400px solid #0891b2;
-  border-right: 550px solid transparent;
-  background-color: #0891b2;
-} */
 
 /* Photo by <a href="https://unsplash.com/@richtervet?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Rich Tervet</a> on <a href="https://unsplash.com/photos/gray-laptop-computer-turned-on-q2GNdFmhxx4?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
    */
